# local-gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  models.json  models.schema.json  package.json  pyproject.toml
blog/: desktop-ai-gateway-73-lines.md
src/: local-gateway.js
src/local_gateway/: __init__.py  __main__.py  cli.py  providers.py  proxy.py
